ansible/files/manifests/osd-test.berg.ru_5601-vs.yaml
# Istio виртуальный сераис для OpenSearch Dashboard port 5601
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: os-dashboard-vsvc
  namespace: logging
spec:
  hosts:
    - "osd-test.berg.ru"
  gateways:
    - istio-system/https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: dashboard
            port:
              number: 5601
